"""create_totp_secrets_table

Revision ID: 4d8a711ce5d2
Revises: f3a1b2c4d5e6
Create Date: 2026-03-09 03:08:28.540635

"""

from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import mysql

# revision identifiers, used by Alembic.
revision: str = "4d8a711ce5d2"
down_revision: Union[str, Sequence[str], None] = "f3a1b2c4d5e6"
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "totp_secrets",
        sa.Column("user_id", sa.CHAR(length=36), nullable=False),
        sa.Column("secret", sa.String(length=64), nullable=False),
        sa.Column(
            "algorithm", sa.String(length=10), server_default="SHA1", nullable=False
        ),
        sa.Column("digits", mysql.TINYINT(), server_default="6", nullable=False),
        sa.Column("period", mysql.TINYINT(), server_default="30", nullable=False),
        sa.Column(
            "is_verified", sa.Boolean(), server_default=sa.text("0"), nullable=False
        ),
        sa.Column("last_used_at", sa.TIMESTAMP(), nullable=True),
        sa.Column("last_used_counter", sa.BigInteger(), nullable=True),
        sa.Column(
            "created_at",
            sa.TIMESTAMP(),
            server_default=sa.text("CURRENT_TIMESTAMP"),
            nullable=False,
        ),
        sa.Column(
            "updated_at",
            sa.TIMESTAMP(),
            server_default=sa.text("CURRENT_TIMESTAMP"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(["user_id"], ["users.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("user_id"),
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table("totp_secrets")
    # ### end Alembic commands ###
