"""create_totp_recovery_codes_table

Revision ID: 6ad9c35ad9cc
Revises: 4d8a711ce5d2
Create Date: 2026-03-09 03:50:39.831264

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa

# revision identifiers, used by Alembic.
revision: str = '6ad9c35ad9cc'
down_revision: Union[str, Sequence[str], None] = '4d8a711ce5d2'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('totp_recovery_codes',
    sa.Column('user_id', sa.CHAR(length=36), nullable=False),
    sa.Column('code_hash', sa.CHAR(length=60), nullable=False),
    sa.Column('used_at', sa.TIMESTAMP(), nullable=True),
    sa.Column('created_at', sa.TIMESTAMP(), server_default=sa.text('CURRENT_TIMESTAMP'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('user_id', 'code_hash')
    )
    op.create_index('idx_recovery_used_at', 'totp_recovery_codes', ['used_at'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('idx_recovery_used_at', table_name='totp_recovery_codes')
    op.drop_table('totp_recovery_codes')
    # ### end Alembic commands ###
