"""create_audit_logs_table

Revision ID: 9a5b4f62b536
Revises: 6ad9c35ad9cc
Create Date: 2026-03-09 03:52:54.213878

"""

from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa

# revision identifiers, used by Alembic.
revision: str = "9a5b4f62b536"
down_revision: Union[str, Sequence[str], None] = "6ad9c35ad9cc"
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "audit_logs",
        sa.Column("id", sa.BigInteger(), autoincrement=True, nullable=False),
        sa.Column("user_id", sa.CHAR(length=36), nullable=True),
        sa.Column("action", sa.String(length=100), nullable=False),
        sa.Column("target_type", sa.String(length=50), nullable=True),
        sa.Column("target_id", sa.CHAR(length=36), nullable=True),
        sa.Column("ip_address", sa.String(length=45), nullable=True),
        sa.Column("user_agent", sa.String(length=512), nullable=True),
        sa.Column(
            "status",
            sa.String(length=20),
            server_default=sa.text("'SUCCESS'"),
            nullable=False,
        ),
        sa.Column("meta", sa.JSON(), nullable=True),
        sa.Column(
            "created_at",
            sa.TIMESTAMP(),
            server_default=sa.text("CURRENT_TIMESTAMP"),
            nullable=False,
        ),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["users.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )

    op.create_index("idx_audit_user_id", "audit_logs", ["user_id"], unique=False)
    op.create_index("idx_audit_action", "audit_logs", ["action"], unique=False)
    op.create_index("idx_audit_status", "audit_logs", ["status"], unique=False)
    op.create_index("idx_audit_created_at", "audit_logs", ["created_at"], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index("idx_audit_created_at", table_name="audit_logs")
    op.drop_index("idx_audit_status", table_name="audit_logs")
    op.drop_index("idx_audit_action", table_name="audit_logs")
    op.drop_index("idx_audit_user_id", table_name="audit_logs")
    op.drop_table("audit_logs")
    # ### end Alembic commands ###
